...
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/oneMach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foregroundGravity="center"
                android:onClick="boardClickMachine" />
...
                android:layout_weight="1"
                android:clickable="true"
                android:foregroundGravity="center"
                android:onClick="boardClickMachine" />

            <ImageView
                android:id="@+id/fiveMach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foregroundGravity="center"
                android:onClick="boardClickMachine" />
...
